crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_212_Multicart212_10000000_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-212-Multicart212/10000000-in-1 [p1][!].nes
rom_sha256=aa5ea08e32bf5fac93c239bd2904eaafc5f4f11993999a7af0f2986e87a3f8ed
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=bedd3c3ceba0072f
checkpoint f900 fb_fnv1a64=76bd9e419fb0fc7e
checkpoint f1100 fb_fnv1a64=8667ef002a7bf719
