crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_212_Multicart212_1997_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-212-Multicart212/1997-in-1 [p1][!].nes
rom_sha256=d11a119325c97586799d53db243340fb29867c4694dee65f7d7d8bdef8fc8a80
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=8b8430ac60adc4aa
checkpoint f900 fb_fnv1a64=958087c1248d5a98
checkpoint f1100 fb_fnv1a64=2ab2f8ef46257fb3
