crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_212_Multicart212_1997_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-212-Multicart212/1997-in-1 [p1][!].zip
rom_sha256=230d7f354720a519ad13cab454c99522d7ec06141dc5bdcd26dc7db584dfc017
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=8b8430ac60adc4aa
checkpoint f900 fb_fnv1a64=958087c1248d5a98
checkpoint f1100 fb_fnv1a64=2ab2f8ef46257fb3
